--- a/css/styles.css
+++ b/css/styles.css
@@ -1,37 +1,24 @@
-main {
-	text-align: center
+p {
+	font-family: calibri;
+	font-size: 13pt
+}
+h1	{
+	font-family: times;
+	font-size: 40pt;
+	color: #3e108f;
+}
+header {
+	text-align: center;
 }
 
-nav {
-	text-align: center
-}
-
-h1 {
-	font-size: times;
-	font-size: 50pt;
+div {
 	text-align: center;
 }
 
 a {
-	font-size: 15pt;
-	font-family: helvetica;	
-	font-weight: normal;
+	vertical-align: top;
 }
 
-a:link { color: black;
-text-decoration: none } 
-
-a:visited { color: gray;
-text-decoration: none}
-
-a:hover { color: black; 
-text-decoration: none}
-
-a:active { color: black; 
-text-decoration: none}
-
-p {
-	font-family: helvetica;
-	font-weight: normal;
-	font-size: 13pt
+body {
+	background-color: #e7f6fd;
 }
