--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,37 @@
-p {
-	font-family: calibri;
-	font-size: 13pt
-}
-h1	{
-	font-family: times;
-	font-size: 40pt;
-	color: #3e108f;
-}
-header {
-	text-align: center;
+main {
+	text-align: center
 }
 
-div {
+nav {
+	text-align: center
+}
+
+h1 {
+	font-size: times;
+	font-size: 50pt;
 	text-align: center;
 }
 
 a {
-	vertical-align: top;
+	font-size: 15pt;
+	font-family: helvetica;	
+	font-weight: normal;
 }
 
-body {
-	background-color: #e7f6fd;
+a:link { color: black;
+text-decoration: none } 
+
+a:visited { color: gray;
+text-decoration: none}
+
+a:hover { color: black; 
+text-decoration: none}
+
+a:active { color: black; 
+text-decoration: none}
+
+p {
+	font-family: helvetica;
+	font-weight: normal;
+	font-size: 13pt
 }
