--- a/css/styles.css
+++ b/css/styles.css
@@ -1,105 +1,27 @@
-* {
-  box-sizing: border-box;
-}
-
 .container {
-  width: 1024px;
-  margin: 0 auto;
+	width: 990px;
 }
 
-.row {
-  display: block;
-  clear: both;
-  margin-bottom: 2%;
-}
-
-.row:after {
-  content: "";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  height: 0;
-  line-height: 0;
-}
-
-[class*="col-"] {
-  float: left;
-  margin-left: 2%;
-  padding: 10px;
-}
-
-[class*="col-"]:first-child {
-  margin-left: 0;
-}
-
-img {
-  margin: 0;
-}
-
-.col-1  { width: 6.5%;  }
-.col-2  { width: 15%;   }
-.col-3  { width: 23.5%; }
-.col-4  { width: 32%;   }
-.col-5  { width: 40.5%; }
-.col-6  { width: 49%;   }
-.col-7  { width: 57.5%; }
-.col-8  { width: 66%;   }
-.col-9  { width: 74.5%; }
-.col-10 { width: 83%;   }
-.col-11 { width: 91.5%; }
-.col-12 { width: 100%;  }
-
-
-
-main {
-	margin: 0, auto;
-}
-
-nav {
-	text-align: center;
-	margin: 0;
+#home-carousel {
+	width: 80%;
+	max-width: 80%;
+	margin:auto;
 }
 
 h1 {
-	font-size: times;
-	font-size: 50pt;
+	font-family: georgia, times, serif;
 	text-align: center;
-	margin: 0;
 }
 
-#active {
-	background: #d5e2f5;
-}
-
-a {
-	font-size: 14pt;
-	font-family: helvetica;	
-	font-weight: normal;
-	background: rgb(230, 230, 230);
-	border: 1px solid gray;
-}
-
-a:link { color: black;
-text-decoration: none } 
-
-a:visited { color: black;
-text-decoration: none}
-
-a:hover { color: black; 
-text-decoration: none}
-
-a:active { color: black; 
-text-decoration: none}
-
-p {
-	font-family: helvetica;
-	font-weight: normal;
-	font-size: 13pt
+#footer {
+	background: #ddd;
+	margin-top: 20px;
+	height: 30px;
 }
 
 .footer {
-	font-family: calibri;
-	font-weight: light;
-	font-size: 12pt;
+	font-size: 1em;
+	line-height: 30px;
+	color: black;
 	text-align: center;
 }
