--- a/css/styles.css
+++ b/css/styles.css
@@ -19,9 +19,59 @@ h1 {
 	height: 30px;
 }
 
+
+body {
+    background-image: url("blue-flowers-pattern.jpg");
+}
+
 .footer {
 	font-size: 1em;
 	line-height: 30px;
 	color: black;
 	text-align: center;
+}
+
+#nbsh2 {
+	text-align: center;
+	font-family: calibri, sans-serif;
+	font-size: 75px;
+	color: #043a8c;
+	
+
+}
+
+#ggg {
+	display: block;
+	height: 500px;
+}
+
+
+#me {
+	text-align: center;
+	font-family: calibri, sans-serif;
+	font-size: 25px;
+	color: #046fb3;
+}
+
+#nbsp {
+	text-align: center;
+	font-family: calibri, sans-serif;
+	font-size: 25px;
+	color: #33617b;
+}
+
+.rowtop {
+	margin-top: 20px;
+
+}
+.item {
+	font-family: calibri, sans-serif;
+	font-size: 25px
+
+
+}
+
+#big {
+	font-size: 40px;
+	color: #035f7d;
 }
