--- a/css/styles.css
+++ b/css/styles.css
@@ -1,77 +1,197 @@
-.container {
-	width: 990px;
+* {
+  box-sizing: border-box;
 }
-
-#home-carousel {
-	width: 80%;
-	max-width: 80%;
+body {
+	width:80%;
 	margin:auto;
 }
 
+header {
+	width:80%;
+	position:fixed;
+	top: 0;
+	background-color: white;
+
+
+
+}
+#header {
+	line-height: 55px;
+	margin-right: 4%;
+}
+
+#nav {
+	padding-top: 10px;
+	margin-left: 10%;
+}
+
+.row {
+  display: block;
+  clear: both;
+  margin-bottom: 2%;
+}
+
+.last  {
+  padding-bottom: 40px;
+}
+
+.row:after {
+  content: "";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  height: 0;
+  line-height: 0;
+}
+
+[class*="col-"] {
+  float: left;
+  margin-left: 0%;
+  padding:10px;
+  
+}
+
+[class*="col-"]:first-child {
+  margin-left: 0;
+}
+
+#main-image img {
+  display: block;
+  width: 80%;
+  margin: auto;
+}
+
+.buy-me img {
+	width:100%;
+	float:left;
+}
+
+
+.col-1  { width: 6.5%;  }
+.col-2  { width: 12.45%;   }
+.col-3  { width: 25%; }
+.col-4  { width: 33.3%;   }
+.col-5  { width: 40.5%; }
+.col-6  { width: 49%;   }
+.col-7  { width: 57.5%; }
+.col-8  { width: 66%;   }
+.col-9  { width: 74.5%; }
+.col-10 { width: 83%;   }
+.col-11 { width: 91.5%; }
+.col-12 { width: 100%;  }
+
+
+main {
+	
+	margin-top: 125px;
+	margin-bottom: 50px;
+
+}
+nav {
+	text-align: center;
+	margin-top: 0;
+
+}
+
 h1 {
-	font-family: georgia, times, serif;
+	font-size: times;
+	font-size: 2.35em;
+	text-align: center;
+	margin: 0;
+	baseline-shift: -10px;
+	font-weight: normal;
+}
+
+#active {
+	color:white;
+	background-color: red;
+}
+
+nav a {
+	font-size: .9em;
+	font-family: helvetica;	
+	font-weight: normal;
+	background: rgb(230, 230, 230);
+	border-left: 1px solid #ccc;
 	text-align: center;
 }
 
-#footer {
-	background: #ddd;
-	margin-top: 20px;
-	height: 30px;
+a:link { color: black;
+text-decoration: none } 
+
+a:visited { color: black;
+text-decoration: none}
+
+#nav a:hover { color: white; 
+	background-color: red;
+text-decoration: none}
+
+a:active { color: black; 
+text-decoration: none}
+
+#bio-par a {
+	font-family: times;
+	font-weight: normal;
+	font-size: 13pt;
+	background-color: white;
+	text-decoration: underline;
 }
 
+#bio-par a:hover {
+	color: black;
+	font-weight: bold;
+} 
 
-body {
-    background-image: url("blue-flowers-pattern.jpg");
+
+p {
+	font-family: times;
+	font-weight: normal;
+	font-size: 13pt
 }
 
 .footer {
-	font-size: 1em;
-	line-height: 30px;
-	color: black;
+	font-family: calibri;
+	font-weight: light;
+	font-size: .9em;
+	text-align: center;
+	line-height: 0;
+}
+
+#footer {
+	position: fixed;
+	bottom: 0;
+	left:0;
+	background-color: #e6e7e8;
+	width: 100%;
+	height:30px;
+}
+
+#contact {
+	vertical-align: center;
 	text-align: center;
 }
 
-#nbsh2 {
-	text-align: center;
-	font-family: calibri, sans-serif;
-	font-size: 75px;
-	color: #043a8c;
-	
-
+#bio-pic img {
+	display:block;
+	width:40%;
+	margin: auto; 
 }
 
-#ggg {
+#bio-pic img {
+	display:block;
+	width:40%;
+	margin: auto; 
+}
+
+#bio-par {
+	margin-left:20%;
+	margin-right:20%;
+}
+button {
 	display: block;
-	height: 500px;
+	background: none;
+	border:none;
+	margin:0 auto;
 }
 
 
-#me {
-	text-align: center;
-	font-family: calibri, sans-serif;
-	font-size: 25px;
-	color: #046fb3;
-}
-
-#nbsp {
-	text-align: center;
-	font-family: calibri, sans-serif;
-	font-size: 25px;
-	color: #33617b;
-}
-
-.rowtop {
-	margin-top: 20px;
-
-}
-.item {
-	font-family: calibri, sans-serif;
-	font-size: 25px
-
-
-}
-
-#big {
-	font-size: 40px;
-	color: #035f7d;
-}
